--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <aside class="bend"></aside>
             <div class="title">
                 <h1>L'histoire du cinéma</h1>
-                <p>Le cinéma d'aujourd'huis a derrirère lui des années et des années de développement avant de parvenir a un tel niveau de qualité et de divertissement, voyons ensemble son histoire a travers le temps!</p>
+                <p>Le cinéma d'aujourd'hui a derrirère lui des années et des années de développement avant de parvenir a un tel niveau de qualité et de divertissement, voyons ensemble son histoire a travers le temps!</p>
             </div>
             <article>
                 <a href="page1.html">
