--- a/page1.html
+++ b/page1.html
@@ -28,7 +28,7 @@
                 </figure>
                 <h2><span class="underline">≃1800 -> 1895</span> <span class="blue">Le pré cinéma</span></h2>
                 <p>
-                    Le terme pré cinéma désigne les procédés inventés au cours du XIXe siècle, pour reconstituer le mouvement à partir de dessins ou de photographies, cette époque est une période ou les inventions ne permettaient pas de diffuser un film comme aujourd’huis mais cependant il y a eu des inventions qui ont permis au cinéma de se développer, les inventions créée utilisaient bien souvent le principe de persistance rétinienne, et donc faire changer une image par une autre similaire très rapidement donnait l’effet de mouvement qui est aujourd'huis utilisé pour n’importe laquelle des vidéos visionnées aujourd'huis
+                    Le terme pré cinéma désigne les procédés inventés au cours du XIXe siècle, pour reconstituer le mouvement à partir de dessins ou de photographies, cette époque est une période où les inventions ne permettaient pas de diffuser un film comme aujourd’huis mais cependant il y a eu des inventions qui ont permis au cinéma de se développer, les inventions créée utilisaient bien souvent le principe de persistance rétinienne, et donc faire changer une image par une autre similaire très rapidement donnait l’effet de mouvement qui est aujourd'huis utilisé pour n’importe laquelle des vidéos visionnées aujourd'huis
                     on y retrouve : <br>
                     1825-1830 - <a href="https://fr.wikipedia.org/wiki/Thaumatrope" target="_blank" class="linknoshadow">le Thaumatrope</a><br>
                     1834 -<a href="https://fr.wikipedia.org/wiki/Zootrope" target="_blank" class="linknoshadow">le Zootrope </a><br>
