--- a/page2.html
+++ b/page2.html
@@ -24,13 +24,13 @@
             <aside class="bend"></aside>
             <article>
                 <figure>
-                    <img src="img/les-frères-lumière.png" alt="image de du programme de la première scéance">
+                    <img src="img/les-frères-lumière.png" alt="image de du programme de la première scéance" height="160px!important">
                     <figcaption>Programme de la première séance publique <br>(image dépixélisée par inteligence artificielle)</figcaption>
                 </figure>
                 <h2><span class="underline">1895</span> <span class="blue">Les frères Lumière</span></h2>
                 <p>
                     En 1895 les frères Lumière inventent la caméra cinématographe qui marque la césure entre le pré-cinéma et le cinéma, plus avancé que le kinétoscope d' Edison. Il possède par exemple un obturateur à disque mobile permettant d’enregistrer sous toutes luminosités.
-                    Grâce à cette machine ils filmèrent et diffusèrent les premier films.
+                    Grâce à cette machine ils filmèrent et diffusèrent les premier films. <br>
                     Son premier film fus Sortie d’usine, suivi du jardinier (connu comme étant l’arroseur arrosé) Il livra le 28 décembre 1895 sa première représentation publique avec le cinématographe devant 30 spectateurs, où il diffusa quelques films.
                     Le film L'Arrivée d'un train en gare de La Ciotat n'est pas projeté ce jour-là, mais le sera par la suite, remportant un énorme succès.
                 </p>
