--- a/page1.html
+++ b/page1.html
@@ -28,16 +28,13 @@
                 </figure>
                 <h2><span class="underline">≃1800 -> 1895</span> <span class="blue">Le pré cinéma</span></h2>
                 <p>
-                    Le terme pré cinéma désigne les procédés inventés au cours du XIXe siècle, pour reconstituer le mouvement à partir de dessins ou de photographies, cette époque est une période où les inventions ne permettaient pas de diffuser un film comme aujourd’huis mais cependant il y a eu des inventions qui ont permis au cinéma de se développer, les inventions créée utilisaient bien souvent le principe de persistance rétinienne, et donc faire changer une image par une autre similaire très rapidement donnait l’effet de mouvement qui est aujourd'huis utilisé pour n’importe laquelle des vidéos visionnées aujourd'huis
-                    on y retrouve : <br>
+                    Le terme pré cinéma désigne les procédés inventés au cours du XIXe siècle, pour reconstituer le mouvement à partir de dessins ou de photographies, cette époque est une période où les inventions ne permettaient pas de diffuser un film comme aujourd’huis mais cependant il y a eu des inventions qui ont permis au cinéma de se développer, les inventions créée utilisaient bien souvent le principe de persistance rétinienne, et donc faire changer une image par une autre similaire très rapidement donnait l’effet de mouvement qui est aujourd'hui utilisé pour n'importe laquelle des vidéos visionées. Aujourd'hui on y retrouve:<br>
                     1825-1830 - <a href="https://fr.wikipedia.org/wiki/Thaumatrope" target="_blank" class="linknoshadow">le Thaumatrope</a><br>
                     1834 -<a href="https://fr.wikipedia.org/wiki/Zootrope" target="_blank" class="linknoshadow">le Zootrope </a><br>
                     1868 - <a href="https://fr.wikipedia.org/wiki/Folioscope" target="_blank" class="linknoshadow">le Folioscope </a><br>
-                    jusque la on est loin d’une salle de cinéma diffusant un film de 2h
-                    une avancée fut réalisée lors de l’invention du<a href="https://fr.wikipedia.org/wiki/Praxinoscope_%C3%A0_projection" target="_blank" class="linknoshadow"> Praxinoscope  à projection</a>
-                    il reprenait le concept du <a href="https://fr.wikipedia.org/wiki/Praxinoscope" target="_blank" class="linknoshadow">Praxinoscope</a>  mais permettais pour la première fois une projection d’image
-                    En 1890, Thomas Edison et William Kennedy Laurie Dickson inventèrent le Kinétoscope, une machine permettant de visionner une vidéo de 2min environ
-                    cependant cette machine tout comme le pléographe de l'inventeur polonais Kazimierz Prószyński. ne furent pas reconnus comme les inventions qui bousculèrent le monde du cinéma car en 1895, un duo d’inventeur créèrent une machine qui les fera entrer eux dans l’histoire du cinéma
+                    Jusque la on est loin d’une salle de cinéma diffusant un film de 2 heures. Une avancée fut réalisée fut réalisée lors de l’invention du<a href="https://fr.wikipedia.org/wiki/Praxinoscope_%C3%A0_projection" target="_blank" class="linknoshadow"> Praxinoscope  à projection</a>
+                    il reprenait le concept du <a href="https://fr.wikipedia.org/wiki/Praxinoscope" target="_blank" class="linknoshadow">Praxinoscope</a>  mais permettais pour la première fois une projection d’image.
+                    En 1890, Thomas Edison et William Kennedy Laurie Dickson inventèrent le Kinétoscope, une machine permettant de visionner une vidéo de 2min environ, cependant cette machine tout comme le pléographe de l'inventeur polonais Kazimierz Prószyński ne furent pas reconnus comme les inventions qui bousculèrent le monde du cinéma car en 1895, un duo d’inventeur créèrent une machine qui les fera entrer eux dans l’histoire du cinéma
 
                 </p>
             </article>
