--- a/page2.html
+++ b/page2.html
@@ -29,9 +29,9 @@
                 </figure>
                 <h2><span class="underline">1895</span> <span class="blue">Les frères Lumière</span></h2>
                 <p>
-                    En 1895 les frères Lumière inventent la caméra cinématographe qui marque la césure entre le pré-cinéma et le cinéma, plus avancé que le kinétoscope d' Edison. Il possède par exemple un obturateur à disque mobile permettant d’enregistrer sous toutes luminosités.
-                    Grâce à cette machine ils filmèrent et diffusèrent les premier films. <br>
-                    Son premier film fus Sortie d’usine, suivi du jardinier (connu comme étant l’arroseur arrosé) Il livra le 28 décembre 1895 sa première représentation publique avec le cinématographe devant 30 spectateurs, où il diffusa quelques films.
+                    En 1895 les frères Lumière inventent la caméra cinématographe qui marque la césure entre le pré-cinéma et le cinéma. Plus avancé que le kinétoscope d'Edison, il possède par exemple un obturateur à disque mobile permettant d’enregistrer sous toutes luminosités.
+                    Grâce à cette machine ils filmèrent et diffusèrent les premiers films. <br>
+                    Son premier film fus Sortie d’usine, suivi du jardinier (connu comme étant l’arroseur arrosé). Il livra le 28 décembre 1895 sa première représentation publique avec le cinématographe devant 30 spectateurs, où il diffusa quelques films.
                     Le film L'Arrivée d'un train en gare de La Ciotat n'est pas projeté ce jour-là, mais le sera par la suite, remportant un énorme succès.
                 </p>
             </article>
