--- a/page3.html
+++ b/page3.html
@@ -30,11 +30,11 @@
                 <h2><span class="underline">20eme siècle -> 21eme siècle</span> <span class="blue">Le développement du cinéma</span></h2>
                 <h3>Apparition du son</h3>
                 <p>
-                    Avant l’ajout du son dans le cinéma, les films étaient silencieux, pour compenser le silence dans les salles de projection il était parfois joué une musique en arrière plan, et parfois même quelques bruitages bien placés.
+                    Avant l’ajout du son dans le cinéma, les films étaient silencieux. Pour compenser le silence dans les salles de projection il était parfois joué une musique en arrière plan, et parfois même quelques bruitages bien placés.
                     Cette époque est appelée le cinéma muet, puis, des inventeurs décident d’essayer de rendre les films plus vivants avec l’ajout de son. Il existait déjà le Phonographe, inventé par Thomas Edison en 1877, petit appareil pour enregistrer et restituer des sons. Cependant il n'était pas adapté à un usage cinématographique car le décalage entre le son et l’image est inévitable.
                     Il y a eu des inventions comme le Chronophone utilisé par Léon Gaumont et le Vitaphone de la Warner Bros qui tentaient de synchroniser le plus possible l’image et le son et même si ces systèmes rencontrèrent les même problèmes techniques ils permirent au studio Warner Bros notamment de devenir un des plus emblématique de l’époque.
-                    Le premier film totalement parlant fus créé seulement en 1929 il se nomme <a href=" Lights of New York" target="_blank" class="linknoshadow"> Lights of New York</a>
-                    L’enregistrement se faisait alors sur une bobine différente. Mais une révolution arriva lorsque la Fox Film Corporation inaugure le Movietone, qui superpose le son sur la bobine d’image rognant au passage une partie de l’image.
+                    Le premier film totalement parlant fus créé seulement en 1929 il se nomme <a href=" Lights of New York" target="_blank" class="linknoshadow"> Lights of New York</a>,
+                    l’enregistrement se faisait alors sur une bobine différente. Mais une révolution arriva lorsque la Fox Film Corporation inaugure le Movietone, qui superpose le son sur la bobine d’image rognant au passage une partie de l’image.
                     Cette technique, considérée comme révolutionnaire, remplaça peu à peu le cinéma muet.
                 </p>
                 <h3>Apparition de la couleur</h3>
