--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
             </article> <article>
                 <a href="page4.html">
                     <h2><span class="underline">20eme siècle -> 21eme siècle:</span> <span class="blue">Le numérique dans le cinéma</span></h2>
-                    <p>Le numérique fus une révolution dans l'industrie du cinéma... <span class="link">Lire la suite</span></p>
+                    <p>Le numérique fut une révolution dans l'industrie du cinéma... <span class="link">Lire la suite</span></p>
                 </a>
             </article><article>
                 <a href="page5.html">
-                    <h2><span class="underline">21eme siècle:</span> <span class="blue">Le cinéma d'aujourd'huis</span></h2>
-                    <p>Le cinéma actuel est une des source de divertissement principale mondiale...<span class="link">Lire la suite</span></p>
+                    <h2><span class="underline">21eme siècle:</span> <span class="blue">Le cinéma d'aujourd'hui</span></h2>
+                    <p>Le cinéma actuel est une des sources de divertissement principale mondiale...<span class="link">Lire la suite</span></p>
                 </a>
             </article>
         </main>
