--- a/page4.html
+++ b/page4.html
@@ -30,21 +30,20 @@
                 <h2><span class="underline">20eme siècle -> 21eme siècle</span> <span class="blue">Le numérique dans le cinéma</span></h2>
                 <h3>L'enregistrement numérique</h3>
                 <p>
-                    Le cinéma numérique est une technique d’enregistrement, de stockage et de diffusion de film qui révolutionna l’industrie du cinéma, de par sa facilité de stockage, de transfert et de modification. Le numérique apparut vers 1990 mais se démocratisa grandement au 21eme siècle car son développement et la “transition numérique” (=passage des appareils pellicule au numériques) est coûteuse et peu développée à l'époque, (par exemple il fallu attendre 2000 pour que les projecteurs numérique atteignent la résolution d’un projecteur à pellicule)
+                    Le cinéma numérique est une technique d’enregistrement, de stockage et de diffusion de film qui révolutionna l’industrie du cinéma, de par sa facilité de stockage, de transfert et de modification. Le numérique apparut vers 1990 mais se démocratisa grandement au 21eme siècle car son développement et la “transition numérique” (=passage des appareils pellicule au numériques) est coûteuse et peu développée à l'époque. Par exemple il fallu attendre 2000 pour que les projecteurs numérique atteignent la résolution d’un projecteur à pellicule.
                     Cependant le numérique est tellement développé que c’est aujourd’huis la méthode principale de diffusion, et avec elle les nouvelles méthodes de visionnages comme les plateformes en ligne
                     Le numérique permet de plus de créer des images ou former des séquences vidéos complexe, à l'aide par exemple de logiciel 3D ou de montage les films deviennent de plus en plus complexe et parfois la distinction entre le réel et le fictionnel devient plus opaque
 
                 </p>
                 <h3>L'apparition de la 3D</h3>
                 <p>
-                    La 3D est une technique qui permet l’ajout de la troisième dimension dans les films, 
-                    Aussi appelée vidéo en relief, cette technique très complexe s’appuie notamment sur le fait que l’humain possède deux yeux. 
+                    La 3D est une technique qui permet l’ajout de la troisième dimension dans  les films. Aussi appelée vidéo en relief, cette technique très complexe s’appuie notamment sur le fait que l’humain possède deux yeux. 
                     L'utilisation du numérique afin de créer ces films en relief facilita la tâche cependant la 3D existait déjà avant par une technique bien connue de tous: 
-                    l’utilisation de lunettes 3D rouge et bleu. Sa première utilisation publique fus en 1952 dans le film
+                    l’utilisation de lunettes 3D rouge et bleu. Sa première utilisation publique fut en 1952 dans le film
                     <a href="https://fr.wikipedia.org/wiki/Bwana_Devil" target="_blank" class="linknoshadow">Bwana Devil</a>
-                    film qui fus inédit pour l’époque.
-                    De nos jours la 3D est bien plus complexe et alliée au numérique cela peut devenir très impressionnant. Même si pour l’instant la technologie actuelle nous contraint à porter des lunettes spéciales.
-                    Le numérique est aussi présent pour d’autre chose comme la retouche d’image pour rendre un film meilleurs ou bien même rajouter des effets spéciaux
+                    film qui fut inédit pour l’époque.
+                    De nos jours la 3D est bien plus complexe et alliée au numérique cela peut devenir très impressionnant même si pour l’instant la technologie actuelle nous contraint à porter des lunettes spéciales.
+                    Le numérique est aussi présent pour d’autre chose comme la retouche d’image pour rendre un film meilleur ou bien même rajouter des effets spéciaux.
                 </p>
             </article>
         </main>
